# gal

./: README.md  build-tools.nix  cabal.project  flake.nix  gal.cabal  hie.yaml  lecture.org
nix/: hix.nix
src/: Main.hs
src/Gal/: App.hs  Event.hs  Game.hs  Input.hs  Render.hs  Texture.hs  Time.hs  Window.hs
src/Gal/Game/: Types.hs
src/Gal/Window/: Event.hs  GLFW.hs  SDL.hs  Types.hs
