cabal-version:      3.0
name:               gal
version:            0.1.0.0
license-file:       LICENSE

extra-source-files:
    README.md

common project-config
  default-language:     Haskell2010
  default-extensions:   OverloadedStrings

  ghc-options:          -Wall
                        -Wcompat
                        -Wincomplete-record-updates
                        -Wincomplete-uni-patterns
                        -Wpartial-fields
                        -Wredundant-constraints
                        -Wunused-packages

library
  import:           project-config
  build-depends:    base >=4.7 && <5
                  , async
                  , aeson
                  , binary
                  , megaparsec
                  , safe-exceptions
                  , base64-bytestring
                  , bytestring
                  -- , dunai
                  , free
                  , parser-combinators
                  , containers
                  , mmorph
                  , derive-storable
                  , unordered-containers
                  , text
                  , lens
                  , resourcet
                  -- , gltf-loader
                  , chronos
                  , rosezipper
                  , torsor
                  , topograph
                  , linear
                  , GLFW-b
                  , OpenGL
                  , bitmap
                  , stb-image
                  , stm
                  , sdl2
                  , sdl2-image
                  , sdl2-ttf
                  , time
                  , unliftio
                  , vector
                  , bytestring
                  , mtl
                  -- , wavefront
                  -- , bearriver
  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules:  Gal.Event
                    Gal.Window.SDL
                    Gal.Render
                    Gal.Game
                    Gal.Game.Types
                    Gal.Texture
                    Gal.Time
                    Gal.Input
                    Gal.App

executable gal
    import:           project-config
    build-depends:    base >=4.7 && <5
                    , async
                    , megaparsec
                    , gal
                    , safe-exceptions
                    -- , dunai
                    , free
                    , parser-combinators
                    , containers
                    , mmorph
                    , derive-storable
                    , unordered-containers
                    , text
                    , lens
                    , resourcet
                    -- , gltf-loader
                    , chronos
                    , rosezipper
                    , torsor
                    , topograph
                    , linear
                    , OpenGL
                    , bitmap
                    , stb-image
                    , stm
                    , vector
                    , bytestring
                    , mtl
                    , time
                    -- , bearriver
                    , vector
                    , GLFW-b
                    , sdl2
                    , sdl2-image
                    , sdl2-ttf
    hs-source-dirs:   src

    default-language: Haskell2010
    main-is:  Main.hs
